--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,7 +1,7 @@
 
 spring:
   application:
-    name: dh-cuenta-service
+    name: dh-caja-service
   cloud:
     config:
         uri: http://localhost:8888
