--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,9 +1,9 @@
 
 spring:
   application:
-    name: dh-caja-service
+    name: dh-cuenta-service
   cloud:
     config:
         uri: http://localhost:8888
   profiles:
-    active: dev
+    active: test
