--- a/pom.xml
+++ b/pom.xml
@@ -27,16 +27,16 @@
 
 <!--		****************Permite que el microservicio se registre en el servidor de Eureka********-->
 
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.cloud</groupId>-->
+<!--			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>-->
+<!--		</dependency>-->
 
-		<!--		actuator le avisa al servidor eureka si esta disponible o no-->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-actuator</artifactId>
-		</dependency>
+<!--		&lt;!&ndash;		actuator le avisa al servidor eureka si esta disponible o no&ndash;&gt;-->
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.boot</groupId>-->
+<!--			<artifactId>spring-boot-starter-actuator</artifactId>-->
+<!--		</dependency>-->
 
 <!--		//***********************ServidorCentralizadoCliente********************//-->
 		<dependency>
