--- a/pom.xml
+++ b/pom.xml
@@ -9,36 +9,19 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.dh</groupId>
-	<artifactId>MicroservicioInicial</artifactId>
+	<artifactId>cuenta</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>ClimaService</name>
-	<description>MicroservicioInicial</description>
+	<name>Cuenta</name>
+	<description>MS Cliente de Cuenta</description>
 	<properties>
-		<java.version>18</java.version>
+		<java.version>17</java.version>
 		<spring-cloud.version>2021.0.5</spring-cloud.version>
 	</properties>
-
 	<dependencies>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
-<!--		****************Permite que el microservicio se registre en el servidor de Eureka********-->
-
-<!--		<dependency>-->
-<!--			<groupId>org.springframework.cloud</groupId>-->
-<!--			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>-->
-<!--		</dependency>-->
-
-<!--		&lt;!&ndash;		actuator le avisa al servidor eureka si esta disponible o no&ndash;&gt;-->
-<!--		<dependency>-->
-<!--			<groupId>org.springframework.boot</groupId>-->
-<!--			<artifactId>spring-boot-starter-actuator</artifactId>-->
-<!--		</dependency>-->
-
-<!--		//***********************ServidorCentralizadoCliente********************//-->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter</artifactId>
@@ -47,21 +30,20 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-config</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-bootstrap</artifactId>
-		</dependency>
-<!--		//****************************************************************************//-->
-
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+<!--		Esta dependencia la vamos a agregar porque los MS van a tener que ir a buscar el archivo de su configuración-->
+<!--		en otro lado, entonces hay que configurarlo-->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-bootstrap</artifactId>
+		</dependency>
 
 	</dependencies>
-
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -82,7 +64,5 @@
 			</plugin>
 		</plugins>
 	</build>
-
-
 
 </project>
