--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,10 +1,8 @@
 spring:
   application:
-    name: ms-subscription
+    name: paqueteria
   cloud:
     config:
-      enabled: true
       uri: http://localhost:8888
-
-
-
+  profiles:
+    active: dev
