--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: microservicioProveedores
+    name: microservicioClientes
   cloud:
     config:
       uri: http://localhost:5000
