--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.dh</groupId>
-	<artifactId>MicroservicioClientes</artifactId>
+	<artifactId>MicroservicioCliente</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>MicroservicioClientes</name>
-	<description>MicroservicioClientes</description>
+	<name>MicroservicioCliente</name>
+	<description>MicroservicioCliente</description>
 	<properties>
 		<java.version>18</java.version>
 		<spring-cloud.version>2021.0.5</spring-cloud.version>
